--- a/main.html
+++ b/main.html
@@ -11,11 +11,19 @@
     <meta name="description" content="An app to track your taken medication." />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Yusei+Magic&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>Keep Track of Your Pills</header>
     <body>
-      <section>Name Start End <button>Add</button></section>
+      <section>
+        <name>Name</name> <time id="start">9:00</time>
+        <time id="end">9:00</time> <button>Add</button>
+      </section>
     </body>
 
     <script src="script.js" async defer></script>
