--- a/main.html
+++ b/main.html
@@ -21,8 +21,10 @@
     <header>Keep Track of Your Pills</header>
     <body>
       <section>
-        <name>Name</name> <time id="start">9:00</time>
-        <time id="end">9:00</time> <button>Add</button>
+        <name class="info">Name</name>
+        <time id="start" class="info">9:00</time>
+        <time id="end" class="info">9:00</time>
+        <button class="info">Add</button>
       </section>
     </body>
 
