finished dummy entry

--- a/main.html
+++ b/main.html
@@ -16,6 +16,12 @@
       href="https://fonts.googleapis.com/css2?family=Lato&family=Yusei+Magic&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <header>Keep Track of Your Pills</header>
@@ -24,8 +30,10 @@
         <name class="info">Name</name>
         <time id="start" class="info">9:00</time>
         <time id="end" class="info">9:00</time>
-        <button class="info">Add</button>
+        <button id="record" class="info">Record</button>
+        <button id="delete" class="info"><i class="fas fa-trash"></i></button>
       </section>
+      <button id="add"><i class="fas fa-plus-circle"></i></button>
     </body>
 
     <script src="script.js" async defer></script>
